--- a/app/src/main/res/layout/activity_pembayaran1.xml
+++ b/app/src/main/res/layout/activity_pembayaran1.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Pembayaran2">
+    tools:context=".PembayaranPilihJam.Pembayaran1Activity">
 
     <ScrollView
         android:layout_weight="1"
@@ -83,6 +83,7 @@
                                 android:textColor="@color/black" />
 
                             <TextView
+                                android:id="@+id/countDownTimer"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="3.5dp"
@@ -118,6 +119,7 @@
                                 android:background="@drawable/gopay"/>
 
                             <TextView
+                                android:id="@+id/paymentMethod"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="10dp"
@@ -169,6 +171,7 @@
                             android:textColor="@color/black" />
 
                         <TextView
+                            android:id="@+id/hargaBooking"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="3.5dp"
@@ -192,7 +195,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="3.5dp"
                             android:layout_gravity="end"
-                            android:text="Rp. 5000"
+                            android:text="Rp. 10.000"
                             android:textColor="@color/black" />
                     </LinearLayout>
 
@@ -208,51 +211,15 @@
                         android:textAlignment="center"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Menunggu Pembayaran"
+                        android:text="List Booking"
                         android:textColor="@color/black"
                         android:textSize="20dp"
                         android:textStyle="bold" />
 
-                    <LinearLayout
-                        android:layout_marginTop="18dp"
-                        android:orientation="horizontal"
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerViewWatches"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Senin"
-                            android:textColor="@color/black" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="3.5dp"
-                            android:layout_gravity="end"
-                            android:text="08:00 -  09:00"
-                            android:textColor="@color/black" />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_marginTop="18dp"
-                        android:orientation="horizontal"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Selasa"
-                            android:textColor="@color/black" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="3.5dp"
-                            android:layout_gravity="end"
-                            android:text="08:00 -  09:00"
-                            android:textColor="@color/black" />
-                    </LinearLayout>
+                        android:layout_height="wrap_content"/>
 
                     <!-- Total Biaya -->
                     <RelativeLayout
@@ -280,7 +247,7 @@
                             android:orientation="horizontal">
 
                             <LinearLayout
-                                android:layout_marginTop="10dp"
+                                android:layout_marginTop="12dp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 >
@@ -292,6 +259,7 @@
                                     android:textAppearance="?attr/textAppearanceBody1" />
 
                                 <TextView
+                                    android:id="@+id/paymentWatchPrice"
                                     android:textColor="@color/white"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -301,15 +269,15 @@
                             </LinearLayout>
                             <View
                                 android:layout_width="0dp"
-                                android:layout_height="wrap_content"
+                                android:layout_height="50dp"
                                 android:layout_weight="1" />
 
-                            <Button
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="end"
-                                android:background="@drawable/button"
-                                android:text="Bayar" />
+                            <!--                            <Button-->
+                            <!--                                android:layout_width="wrap_content"-->
+                            <!--                                android:layout_height="wrap_content"-->
+                            <!--                                android:layout_gravity="end"-->
+                            <!--                                android:background="@drawable/button"-->
+                            <!--                                android:text="Bayar" />-->
                         </LinearLayout>
 
 
