--- a/app/src/main/res/layout/activity_selected_hours.xml
+++ b/app/src/main/res/layout/activity_selected_hours.xml
@@ -52,16 +52,16 @@
                     android:layout_height="wrap_content">
 
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textSize="20dp"
-                    android:textColor="@color/black"
-                    android:text="Bogor Dance"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:textSize="20dp"
+                        android:textColor="@color/black"
+                        android:text="Bogor Dance"/>
 
 
-<!--                    Alamat-->
+                    <!--                    Alamat-->
                     <LinearLayout
                         android:layout_marginTop="10dp"
                         android:layout_width="match_parent"
@@ -80,7 +80,7 @@
                             android:text="Jl. Bina Marga No.5, RT.04/RW.11, Baranangsiang"/>
                     </LinearLayout>
 
-<!--                    Star-->
+                    <!--                    Star-->
                     <LinearLayout
                         android:layout_marginTop="10dp"
                         android:layout_width="match_parent"
@@ -140,94 +140,44 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <!-- Item 1 -->
                     <LinearLayout
+                        android:orientation="vertical"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center_vertical"
-                        android:background="@drawable/splash"
-                        android:padding="8dp"
-                        android:layout_marginBottom="8dp">
+                        android:layout_height="wrap_content">
 
-                        <TextView
-                            android:layout_width="0dp"
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recyclerViewSelected"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1" />
+
+                        <!-- Buttons -->
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Senin"/>
+                            android:orientation="horizontal"
+                            android:gravity="center"
+                            android:layout_marginTop="16dp">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Rp. "
-                            android:textAppearance="?attr/textAppearanceBody1"/>
+                            <Button
+                                android:id="@+id/buttonDeleteSelected"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="hapus"
+                                android:background="@drawable/button"/>
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="40.000"
-                            android:textAppearance="?attr/textAppearanceBody1"/>
+                            <Button
+                                android:id="@+id/buttonAdd"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:layout_marginStart="16dp"
+                                android:text="Tambah"
+                                android:background="@drawable/button"/>
+                        </LinearLayout>
 
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
 
-                    <!-- Item 2 -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center_vertical"
-                        android:background="@drawable/splash"
-                        android:padding="8dp"
-                        android:layout_marginBottom="8dp">
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Selasa"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Rp. "
-                            android:textAppearance="?attr/textAppearanceBody1"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="20.000"
-                            android:textAppearance="?attr/textAppearanceBody1"/>
-
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
-
-                    <!-- Buttons -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center"
-                        android:layout_marginTop="16dp">
-
-                        <Button
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="hapus"
-                            android:background="@drawable/button"/>
-
-                        <Button
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:layout_marginStart="16dp"
-                            android:text="Tambah"
-                            android:background="@drawable/button"/>
                     </LinearLayout>
 
 
@@ -262,9 +212,11 @@
                             />
 
                         <TextView
+                            android:id="@+id/biayaStudio"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Rp. 180.000"/>
+                            android:text="Rp. 10.000"/>
+
                     </LinearLayout>
 
                     <LinearLayout
@@ -312,11 +264,11 @@
                         android:layout_height="match_parent">
 
                         <Spinner
-                            android:id="@+id/spinner"
+                            android:id="@+id/spinnerPaymentMethod"
                             android:layout_width="match_parent"
                             android:layout_height="46dp"
                             android:layout_marginBottom="11dp"
-                            android:entries="@array/spinner_items"
+                            android:entries="@array/payment_methods"
 
                             android:spinnerMode="dropdown" />
 
@@ -359,6 +311,7 @@
                                 android:textAppearance="?attr/textAppearanceBody1"/>
 
                             <TextView
+                                android:id="@+id/textViewTotalPrice"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="170000"
@@ -368,6 +321,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"/>
                             <Button
+                                android:id="@+id/buttonPay"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Bayar"
