--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -59,22 +59,21 @@
                     android:layout_marginLeft="50dp"
 
                     android:textSize="12sp"
-                    android:fontFamily="@font/poppins_regular"
                     android:textColor="@color/white" />
-
+                <!--android:fontFamily="@font/poppins_regular"-->
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="95dp"
                     android:layout_marginLeft="33dp"
-                    android:fontFamily="@font/poppins_regular"
+
 
                     android:text="Hi, Welcome to Beatbounce
                  User"
                     android:textColor="@color/white"
                     android:textSize="20sp" />
-
+                <!--android:fontFamily="@font/poppins_regular"-->
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -118,7 +117,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginLeft="15dp"
-                android:fontFamily="@font/poppins_regular"
                 android:gravity="center_vertical"
                 android:text="Disekitarmu"
                 android:textColor="@color/white"
@@ -146,7 +144,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginLeft="15dp"
-                android:fontFamily="@font/poppins_regular"
                 android:gravity="center_vertical"
                 android:text="Coba tempat baru"
                 android:textColor="@color/white"
@@ -188,7 +185,7 @@
         android:elevation="2dp"
         app:itemIconSize="30dp"
         app:itemIconTint="@drawable/item_selector"
-        app:itemRippleColor="@color/colorPrimary"
+        app:itemRippleColor="@color/default_color"
         app:labelVisibilityMode="unlabeled"
         app:menu="@menu/bottom_menu" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
