--- a/app/src/main/res/layout/item_hour.xml
+++ b/app/src/main/res/layout/item_hour.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="350dp"
+    android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:background="@drawable/orange_bg_rounded_15"
     android:id="@+id/outerLinearLayout"
     android:layout_margin="10dp"
 
@@ -13,11 +12,11 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textViewHour"
+            android:id="@+id/watch_name"
             android:layout_width="130dp"
             android:layout_height="match_parent"
             android:fontFamily="@font/poppins_regular"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="16sp"
             android:gravity="center_vertical"
             android:text="08:00 - 09:00"
@@ -36,7 +35,7 @@
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:layout_alignParentEnd="true"
-            android:layout_marginRight="40dp"
+            android:layout_marginRight="20dp"
             >
 
             <TextView
@@ -44,48 +43,23 @@
                 android:layout_height="match_parent"
                 android:fontFamily="@font/poppins_regular"
                 android:text="Rp. "
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="16sp"
                 android:gravity="center_vertical"
                 >
 
             </TextView>
             <TextView
-                android:id="@+id/textViewPriceHour"
+                android:id="@+id/watch_price"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/poppins_regular"
                 android:text="100.000"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="16sp"
                 android:gravity="center_vertical"
                 >
-
             </TextView>
         </LinearLayout>
-
-
-        <CheckBox
-            android:id="@+id/checkBoxIsAvailable"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="13dp"
-            android:layout_marginBottom="10dp"
-            android:buttonTint="@color/colorPrimary"
-            android:background="@drawable/circle_bg"
-
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:layout_alignParentEnd="true"
-            style="@style/CustomCheckBox"/>
-
-
     </RelativeLayout>
-
-
-
-
-
 </LinearLayout>
